# phone_book

./: .gitignore  Makefile  README.md  pyproject.toml
book/: admin.py  enums.py  managers.py  models.py  permissions.py  tasks.py  validators.py
book/api/: routers.py
book/api/serializers/: organization.py  organization_permission.py
book/api/viewsets/: __init__.py  organization.py  organization_permission.py
book/helpers/: decorators.py  mixins.py
book/management/commands/: start_seed.py
book/migrations/: 0001_initial.py
phone_book/: asgi.py  celery_settings.py  settings.py  urls.py  wsgi.py  yasg.py
user/: admin.py  models.py
user/management/commands/: create-admin.py
user/migrations/: 0001_initial.py
